--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-countdown-clock": "^2.6.0",
     "react-dom": "^16.8.6",
+    "react-geolocated": "^2.5.0",
     "react-here-map": "^1.1.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-signature-canvas": "^1.0.2",
     "react-steps": "0.0.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
