--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-signature-canvas": "^1.0.2",
+    "react-star-rating-component": "^1.4.1",
     "react-steps": "0.0.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
